--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -20,6 +20,12 @@
     },
     "permissions": [
       "tabs"
+      
+    ],
+    "host_permissions":[
+      "https://*/*",
+      "http://*/*"
     ]
   }
+  
   
